# Contact-Management-System

./: .gitignore  Dockerfile.render  LICENSE  README.md  docker-compose.yml  implementation_plan_contact_system
backend/: .env.example  README.md  package-lock.json  package.json
backend/src/: app.js  server.js
backend/src/config/: cloudinary.js  db.js  env.js
backend/src/controllers/: authController.js  contactController.js  importExportController.js  notificationController.js  searchController.js
backend/src/database/: seed.js
backend/src/middleware/: auth.js  errorHandler.js  rateLimiter.js  upload.js  validate.js
backend/src/models/: ActivityLog.js  Contact.js  Notification.js  SearchHistory.js  User.js
backend/src/routes/: authRoutes.js  contactRoutes.js  importExportRoutes.js  index.js  notificationRoutes.js  searchRoutes.js
backend/src/services/: cppBridge.js
backend/src/utils/: responseHandler.js  tokenUtils.js
cpp-engine/: CMakeLists.txt  README.md
cpp-engine/include/: BST.h  Contact.h  HashMap.h  PriorityQueue.h  Queue.h  Search.h  Sorting.h  Stack.h  Trie.h
cpp-engine/include/nlohmann/: json.hpp
cpp-engine/src/: main.cpp
cpp-engine/src/BST/: BST.cpp
cpp-engine/src/Contact/: Contact.cpp
cpp-engine/src/HashMap/: HashMap.cpp
cpp-engine/src/Queue/: PriorityQueue.cpp  Queue.cpp
cpp-engine/src/Search/: BinarySearch.cpp
cpp-engine/src/Sorting/: Sorting.cpp
cpp-engine/src/Stack/: Stack.cpp
cpp-engine/src/Trie/: Trie.cpp
docker/: Dockerfile.backend  Dockerfile.cpp-engine  Dockerfile.frontend
docs/API-Documentation/: api-docs.md
docs/Class-Diagram/: class-diagram.md
docs/ER-Diagram/: er-diagram.md
docs/Flowchart/: flowchart.md
docs/Sequence-Diagram/: sequence-diagram.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
postman/: Smart-Contact-Management.postman_collection.json
(+45 files in other folders)
